# openagentos

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  aegra.json  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  sandbox.toml
agentos/: __init__.py  artifacts.py  assets.py  auth.py  backends.py  builder.py  config.py  graph.py  mcp.py  mcp_tools.py  middleware.py  model.py  msteams.py  prompts.py  redaction.py  review.py  routes.py  runtime.py  sandbox.py  scoring.py  subagents.py  sweeper.py  tools.py  workspace.py
agentos/routes/: __init__.py  assets.py  common.py  execute.py  feedback.py  files.py  webhooks.py
agentos/sandbox/: __init__.py  client.py  run.py  session.py
docs/: performance-analysis.md  review-and-quality-design.md
scripts/: smoke_test.py
