# OpenAgentOS — self-hosted AI agent OS: DeepAgents (agent harness) on Aegra (server).
#
# Managed with uv. Pinned to Python 3.12 for the widest native-wheel coverage
# (Aegra requires >=3.12; some transitive C-extension deps still lag on 3.14).

[project]
name = "openagentos"
version = "0.2.0"
description = "Self-hosted AI Agent OS — DeepAgents on Aegra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Server / deployment layer (self-hosted Agent Protocol server; CLI + API from the fork — see [tool.uv.sources]).
    "aegra-cli>=0.11,<0.12",
    "aegra-api>=0.11,<0.12",
    # Agent harness (planning, filesystem, subagents, skills) — returns a LangGraph graph.
    "deepagents>=0.6.12,<0.7",
    # Chat model client for the OpenAI-compatible gateway (base_url override).
    "langchain-openai>=1.0",
    # Optional MCP tool integration (QuickBooks / ClickUp / your own servers).
    "langchain-mcp-adapters>=0.1",
    # LangGraph client SDK — ServerRuntime 类型注解（graph.py）与 Auth（auth.py）。
    "langgraph-sdk>=0.1",
    # .env loading.
    "python-dotenv>=1.0",
    # 沙箱执行：把 OpenSandbox 容器桥接为 DeepAgents backend（每线程一个沙箱）。
    "deepagents-opensandbox",
    "opensandbox>=0.1.13",
    "langchain-anthropic>=1.0",
    "langfuse>=3",
]

[tool.uv]
# This is an application, not a distributable library — uv only manages the
# dependency venv. The local `agentos` package is imported via aegra.json's
# `dependencies: ["."]`, so no build backend is required.
package = false

[tool.uv.sources]
# aegra 从 fork 装:monorepo 两包各在 libs/ 子目录;uv source 只对直接依赖生效,故 aegra-api 也直列。
aegra-cli = { git = "https://github.com/cosmic-gao/aegra.git", subdirectory = "libs/aegra-cli", branch = "feat/langsmith-runtime-parity" }
aegra-api = { git = "https://github.com/cosmic-gao/aegra.git", subdirectory = "libs/aegra-api", branch = "feat/langsmith-runtime-parity" }
# deepagents-opensandbox 尚未发布到 PyPI，从 git 安装。
deepagents-opensandbox = { git = "https://github.com/cosmic-gao/opensandbox.git", branch = "main" }
